# wordpress-post-exporter

./: .editorconfig  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_client.py  test_config.py  test_exporters.py  test_main.py  test_service.py  test_transformers.py
wp_exporter/: __init__.py  client.py  config.py  exporters.py  service.py  transformers.py
