[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-exporter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["wp_exporter", "main"]
branch = true
omit = []

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
